@@ -63,3 +63,4 @@
 18-Mar-2021 V0.71 Adjustments in initialization  UniProtExtractor()
 13-May-2021 V0.72 Add minSeqLen argument to exportProteinEntityFasta()
 24-May-2021 V0.73 Add BranchedEntityExtractor() and associated tests
+26-May-2021 V0.74 Add modules GlycanProvider(), GlycanUtils() and associated tests
